--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="graph-container" id="stackedArea"></div>
         </div>
 
-        <!-- Graph Block 4 (Stacked Bar Chart) -->
+        <!-- Graph Block 4 (Stacked Bar) -->
         <div class="graph-block">
             <h3>Stacked Bar Chart</h3>
         </div>
