--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="graph-block">
             <h3>Bar Chart</h3>
         </div>
-        <div class="graph-row">
+        <div class="graph-row" style="margin-bottom: 120px;">
             <div class="graph-description">
                 <p>Malays consistently constitute the largest ethnic group in Malaysia from 2010 to 2025, dominating the population share over the entire period. 
                     Chinese remain the second largest group, followed by Other Bumiputera as the third.</p>
