--- a/index.html
+++ b/index.html
@@ -175,13 +175,7 @@
          <!-- Graph Block 2 (Heatmap) -->
         <div class="graph-block">
             <h3>Heatmap</h3>
-        </div>
-        <div class="graph-row">
-            <div class="graph-description">
-                <p>The darkest shades (indicating the highest population counts) are consistently seen in the 25–29, 30–34, and 35–39 age groups, making them the most populous segments throughout the years.
-                    Younger age groups like 0–4 and 5–9 show lighter colors over time, indicating slower growth or even decline, which possibly reflecting lower birth rates.</p>
-            </div>
-            <div class="graph-container" id="heatMap"></div>
+            <div id="heatMap"></div>
         </div>
 
         
