--- a/index.html
+++ b/index.html
@@ -111,14 +111,12 @@
         }
     </style>
 
-    <title>Data Visualizations</title>
-
 </head>
 
 <body>
 
     <header>
-        <h1>Data Visualization Dashboard</h1>
+        <h1>Malaysia's Population (2010 - 2025)</h1>
         <p>A collection of interactive visualizations for dataset insights</p>
     </header>
 
@@ -126,7 +124,7 @@
 
         <!-- Graph Block 5 (Choropleth Map) -->
         <div class="graph-block">
-            <h3>Map</h3>
+            <h3>State Populations Relative to National Population</h3>
         </div>
         <div class="graph-row">
             <div class="graph-description">
@@ -138,7 +136,7 @@
 
         <!-- Graph Block 1 (Bar Chart) -->
         <div class="graph-block">
-            <h3>Bar Chart</h3>
+            <h3>Ethnic Group Population Distribution</h3>
         </div>
         <div class="graph-row" style="margin-bottom: 120px;">
             <div class="graph-description">
@@ -150,7 +148,7 @@
 
         <!-- Graph Block 3 (Stacked Area Chart) -->
         <div class="graph-block">
-            <h3>Stacked Area Chart</h3>
+            <h3>Statewise Population Growth</h3>
         </div>
         <div class="graph-row">
             <div class="graph-description">
@@ -162,7 +160,7 @@
 
         <!-- Graph Block 4 (Stacked Bar) -->
         <div class="graph-block">
-            <h3>Stacked Bar Chart</h3>
+            <h3>Gender-Based Population Growth</h3>
         </div>
         <div class="graph-row">
             <div class="graph-description">
@@ -174,7 +172,7 @@
 
          <!-- Graph Block 2 (Heatmap) -->
         <div class="graph-block">
-            <h3>Heatmap</h3>
+            <h3>Population Distribution by Age Group</h3>
         </div>
         <div class="graph-row">
             <div class="graph-description">
