--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         }
 
         header {
+            font-family: "Times New Roman", Times, serif;
             background-color: #2c3e50;
             color: white;
             padding: 20px;
@@ -50,7 +51,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             width: 100%;
-            max-width: 1280px; /* Max width to prevent it from being too wide */
+            max-width: 1200px; /* Max width to prevent it from being too wide */
             margin-top: 20px;
         }
 
@@ -62,10 +63,11 @@
 
         .graph-block {
             margin-bottom: 10px; /* Increase the bottom margin to create larger space between graph blocks */
-            text-align: left;
+            text-align: right;
         }
 
         .graph-block h3 {
+            font-family: "Times New Roman", Times, serif;
             font-size: 1.8rem;
             margin-bottom: 10px;
             text-align: center;
@@ -76,25 +78,28 @@
             margin-top: 10px;
             margin-left: 0;
             display: flex;
+            justify-content: space-evenly; /* Evenly spaces content */
             align-items: center; /* Align description text to the top */
             height: 400px; /* Set a fixed height for description */
             width: 50%; /* Same width as the graph */
+            padding-left: 15px; /* Adjust this value to control the internal left whitespace */
+             text-align: justify; /* Justifies the text, aligning it to both the left and right edges */
         }
 
         .graph-container {
             width: 50%; /* Half width for the graph */
             height: 400px; /* Set a fixed height for the graphs */
             min-height: 400px;
-            margin-top: 50px;
+            margin-top: 30px;
         }
 
         .graph-row {
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: flex-start; /* Align both graph and description to the top */
             width: 100%;
-            gap: 30px;
-        }
+            gap: 50px;
+        } 
 
         @media (max-width: 768px) {
             .graph-row {
@@ -117,7 +122,7 @@
 
     <header>
         <h1>Malaysia's Population (2010 - 2025)</h1>
-        <p>A collection of interactive visualizations for dataset insights</p>
+        <p>Analyzing Malaysia's Population Trends by Age, Gender, Ethnicity, and State from 2010 to 2025</p>
     </header>
 
     <section>
